--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
 
   <li class="dope-link">
     <span>My music</span>
-    <a href="http://frsh.fm" title="A collection of music I make under the aliases, 'the Wibby' and, 'Spaceman Fresh'.">FRSH&times;BTS</a>
+    <a href="https://thewibby.bandcamp.com" title="A collection of music I make under the aliases, 'the Wibby' and, 'Spaceman Fresh'.">FRSH&times;BTS</a>
   </li>
 
   <li class="dope-link">
